--- a/SchoolCoupons/appsettings.json
+++ b/SchoolCoupons/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CouponsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SystemForSchoolCoupons;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true"
+  },
+  "files.associations": {
+    "*.cshtml": "html"
   }
 }
